fix logo flow to visible

--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -46,10 +46,12 @@
   }
 
   .header__logo--container {
-    width: 200px;
+    width: 250px;
+    overflow: visible;
 
     .logo {
       fill: currentColor;
+      overflow: visible;
     }
   }
 }
